Fix google indexing

--- a/_posts/2002-10-08-72.markdown
+++ b/_posts/2002-10-08-72.markdown
@@ -3,4 +3,4 @@ layout: post
 date:   2002-10-08
 categories:
 ---
-Added <a href="asm/zlib390">zlib390</a> to the Assembler section
+Added <a href="asm/zlib390/">zlib390</a> to the Assembler section
