--- a/_posts/2003-03-17-55.markdown
+++ b/_posts/2003-03-17-55.markdown
@@ -3,4 +3,4 @@ layout: post
 date:   2003-03-17
 categories:
 ---
-Updated <a href="zlinux/multiboot">MultiBoot</a> patch
+Updated <a href="zlinux/multiboot/">MultiBoot</a> patch
