--- a/_posts/2003-04-03-54.markdown
+++ b/_posts/2003-04-03-54.markdown
@@ -3,4 +3,4 @@ layout: post
 date:   2003-04-03
 categories:
 ---
-Added <a href="zlinux/kernelfixes">Kernel Fixes</a> section
+Added <a href="zlinux/kernelfixes/">Kernel Fixes</a> section
