--- a/_posts/2003-07-18-43.markdown
+++ b/_posts/2003-07-18-43.markdown
@@ -3,4 +3,4 @@ layout: post
 date:   2003-07-18
 categories:
 ---
-Added a couple more <a href="zlinux/kernelfixes">Kernel Fixes</a>
+Added a couple more <a href="zlinux/kernelfixes/">Kernel Fixes</a>
