--- a/_posts/2003-10-31-35.markdown
+++ b/_posts/2003-10-31-35.markdown
@@ -3,4 +3,4 @@ layout: post
 date:   2003-10-31
 categories:
 ---
-Several features added to <a href="rexx/txt2pdf">TXT2PDF</a> including compression and encryption support in VM.&nbsp; Thanks Frank!!!
+Several features added to <a href="rexx/txt2pdf/">TXT2PDF</a> including compression and encryption support in VM.&nbsp; Thanks Frank!!!
