--- a/_posts/2004-03-18-33.markdown
+++ b/_posts/2004-03-18-33.markdown
@@ -3,4 +3,4 @@ layout: post
 date:   2004-03-18
 categories:
 ---
-Released <a href="asm/md5">MD5</a> into the Public Domain.
+Released <a href="asm/md5/">MD5</a> into the Public Domain.
