--- a/_posts/2005-06-13-27.markdown
+++ b/_posts/2005-06-13-27.markdown
@@ -3,4 +3,4 @@ layout: post
 date:   2005-06-13
 categories:
 ---
-Added the <a href="zvm/vma">VMA</a> utility to list and extract VMARC files on non-VM systems.
+Added the <a href="zvm/vma/">VMA</a> utility to list and extract VMARC files on non-VM systems.
