--- a/_posts/2005-06-16-26.markdown
+++ b/_posts/2005-06-16-26.markdown
@@ -3,4 +3,4 @@ layout: post
 date:   2005-06-16
 categories:
 ---
-Updated the <a href="zvm/vma">VMA</a> utility.
+Updated the <a href="zvm/vma/">VMA</a> utility.
