--- a/_posts/2005-06-23-24.markdown
+++ b/_posts/2005-06-23-24.markdown
@@ -3,4 +3,4 @@ layout: post
 date:   2005-06-23
 categories:
 ---
-New release of <a href="zvm/vma">VMA</a> and it now includes the Windows GUI version.
+New release of <a href="zvm/vma/">VMA</a> and it now includes the Windows GUI version.
