--- a/_posts/2005-06-29-22.markdown
+++ b/_posts/2005-06-29-22.markdown
@@ -3,4 +3,4 @@ layout: post
 date:   2005-06-29
 categories:
 ---
-A couple of minor updates to <a href="zvm/vma">VMA</a>.
+A couple of minor updates to <a href="zvm/vma/">VMA</a>.
