--- a/_posts/2007-01-12-18.markdown
+++ b/_posts/2007-01-12-18.markdown
@@ -3,4 +3,4 @@ layout: post
 date:   2007-01-12
 categories:
 ---
-New version of <a href="zvm/vma">VMA</a>.
+New version of <a href="zvm/vma/">VMA</a>.
