--- a/_posts/2010-03-11-11.markdown
+++ b/_posts/2010-03-11-11.markdown
@@ -3,4 +3,4 @@ layout: post
 date:   2010-03-11
 categories:
 ---
-Added support for creating/updating VMARCs to <a href="zvm/vma">VMA</a>.
+Added support for creating/updating VMARCs to <a href="zvm/vma/">VMA</a>.
