--- a/_posts/2010-03-13-10.markdown
+++ b/_posts/2010-03-13-10.markdown
@@ -3,4 +3,4 @@ layout: post
 date:   2010-03-13
 categories:
 ---
-Fixed a critter in <a href="zvm/vma">VMA</a> when adding to existing archives.
+Fixed a critter in <a href="zvm/vma/">VMA</a> when adding to existing archives.
