--- a/_posts/2010-08-07-9.markdown
+++ b/_posts/2010-08-07-9.markdown
@@ -3,4 +3,4 @@ layout: post
 date:   2010-08-07
 categories:
 ---
-Fixed a critter in <a href="zvm/kaos">KAOS</a> when more than 58 servers were defined.
+Fixed a critter in <a href="zvm/kaos/">KAOS</a> when more than 58 servers were defined.
