--- a/_posts/2010-08-23-8.markdown
+++ b/_posts/2010-08-23-8.markdown
@@ -3,4 +3,4 @@ layout: post
 date:   2010-08-23
 categories:
 ---
-Created a standalone version of the <a href="zlinux/unionfs">Unionfs</a> filesystem for SLES
+Created a standalone version of the <a href="zlinux/unionfs/">Unionfs</a> filesystem for SLES
