--- a/_posts/2011-02-17-5.markdown
+++ b/_posts/2011-02-17-5.markdown
@@ -3,4 +3,4 @@ layout: post
 date:   2011-02-17
 categories:
 ---
-Added some brief usage comments to <a href="zvm/smcli">smcli</a>
+Added some brief usage comments to <a href="zvm/smcli/">smcli</a>
