--- a/_posts/2002-10-11-67.markdown
+++ b/_posts/2002-10-11-67.markdown
@@ -3,4 +3,4 @@ layout: post
 date:   2002-10-11
 categories:
 ---
-Added <a href="asm/arc4">arc4</a> to the Assembler section
+Added <a href="asm/arc4/">arc4</a> to the Assembler section
