--- a/_posts/2002-12-08-62.markdown
+++ b/_posts/2002-12-08-62.markdown
@@ -3,4 +3,4 @@ layout: post
 date:   2002-12-08
 categories:
 ---
-Added <a href="asm/zlibLE">zlibLE</a> and <a href="asm/bzlibLE">bzlibLE</a> to the Assembler section
+Added <a href="asm/zlibLE/">zlibLE</a> and <a href="asm/bzlibLE">bzlibLE</a> to the Assembler section
