--- a/_posts/2002-12-09-60.markdown
+++ b/_posts/2002-12-09-60.markdown
@@ -3,4 +3,4 @@ layout: post
 date:   2002-12-09
 categories:
 ---
-Updated <a href="asm/zlib390">zlib390</a> and <a href="asm/bzlib390">bzlib390</a>
+Updated <a href="asm/zlib390/">zlib390</a> and <a href="asm/bzlib390">bzlib390</a>
