--- a/_posts/2004-05-26-31.markdown
+++ b/_posts/2004-05-26-31.markdown
@@ -3,4 +3,4 @@ layout: post
 date:   2004-05-26
 categories:
 ---
-Fixed the <a href="zlinux/vmparms">VMPARMS</a> patch to allow IPLing from tape and the VM reader.
+Fixed the <a href="zlinux/vmparms/">VMPARMS</a> patch to allow IPLing from tape and the VM reader.
