--- a/_posts/2005-06-21-25.markdown
+++ b/_posts/2005-06-21-25.markdown
@@ -3,4 +3,4 @@ layout: post
 date:   2005-06-21
 categories:
 ---
-Added a fancy, schmancy (:-B) preliminary GUI version of the <a href="zvm/vma">VMA</a> utility.
+Added a fancy, schmancy (:-B) preliminary GUI version of the <a href="zvm/vma/">VMA</a> utility.
