--- a/_posts/2006-05-05-19.markdown
+++ b/_posts/2006-05-05-19.markdown
@@ -3,4 +3,4 @@ layout: post
 date:   2006-05-05
 categories:
 ---
-New Mac version of <a href="zvm/vma">VMAgui</a> that opens viewer app on top of VMAgui.
+New Mac version of <a href="zvm/vma/">VMAgui</a> that opens viewer app on top of VMAgui.
