--- a/_posts/2008-11-06-17.markdown
+++ b/_posts/2008-11-06-17.markdown
@@ -3,4 +3,4 @@ layout: post
 date:   2008-11-06
 categories:
 ---
-A few changes made to <a href="rexx/txt2pdf">TXT2PDF</a>.
+A few changes made to <a href="rexx/txt2pdf/">TXT2PDF</a>.
