--- a/_posts/2009-04-02-16.markdown
+++ b/_posts/2009-04-02-16.markdown
@@ -3,4 +3,4 @@ layout: post
 date:   2009-04-02
 categories:
 ---
-Made <a href="zvm/vma">VMA</a> more compatible with newer versions of wxWidghets
+Made <a href="zvm/vma/">VMA</a> more compatible with newer versions of wxWidghets
