--- a/_posts/2011-02-11-6.markdown
+++ b/_posts/2011-02-11-6.markdown
@@ -3,4 +3,4 @@ layout: post
 date:   2011-02-11
 categories:
 ---
-Added the <a href="zvm/smcli">smcli</a> z/VM system managment command line utility
+Added the <a href="zvm/smcli/">smcli</a> z/VM system managment command line utility
