--- a/_posts/2012-03-21-2.markdown
+++ b/_posts/2012-03-21-2.markdown
@@ -3,4 +3,4 @@ layout: post
 date:   2012-03-21
 categories:
 ---
-Restored support for building/running <a href="zvm/vma">VMA</a> on z/OS.
+Restored support for building/running <a href="zvm/vma/">VMA</a> on z/OS.
