--- a/_posts/2020-08-13-1.markdown
+++ b/_posts/2020-08-13-1.markdown
@@ -3,4 +3,4 @@ layout: post
 date:   2020-08-13
 categories:
 ---
-Notarized VMA for Mac Catalina <a href="zvm/vma">VMA Utility</a>.
+Notarized VMA for Mac Catalina <a href="zvm/vma/">VMA Utility</a>.
